deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-api
spec:
  selector:
    app: dentists-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
